minor style fixes
 changing margins so that the logo does not fit from margin to margin,
 especially on mobile

--- a/webpage/styles/story-styles.css
+++ b/webpage/styles/story-styles.css
@@ -27,9 +27,13 @@
     color: #000;
 }
 
+.logo{
+    margin: 25px;
+}
+
 #head img{
     height: 100px;
-    max-width: 300px;
+    max-width: 500px;
     flex: 1;
     border-radius: 10px;
 }
